--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,100 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  height: 100%;
+  background-image:  linear-gradient(to right, rgba(47, 77, 114, 1), rgba(121, 66, 139, 1)) !important;
+ }
+ 
+ .container {
+   position: relative;
+   width: 100%;
+   height: 100%;
+   overflow: hidden;
+ }
+ 
+ 
+ .square{
+   position: absolute;
+   bottom: -100px;
+   background-color: whitesmoke;
+   animation: boxes 13s infinite ease-in-out;
+ }
+ 
+ .square:nth-child(1) {
+   width: 75px;
+   height: 75px;
+   left: 7%;
+ }
+ 
+ .square:nth-child(2) {
+   width: 65px;
+   height: 65px;
+   left: 15%;
+   animation-delay: 3s;
+ }
+ 
+ .square:nth-child(3) {
+   width: 82px;
+   height: 82px;
+   left: 45%;
+   animation-delay: 7s;
+ }
+ 
+ .square:nth-child(4) {
+   width: 70px;
+   height: 70px;
+   left: 55%;
+   animation-delay: 2s;
+ }
+ 
+ .square:nth-child(5) {
+   width: 60px;
+   height: 60px;
+   left: 27%;
+   animation-delay: 5s;
+ }
+ 
+ .square:nth-child(6) {
+   width: 55px;
+   height: 55px;
+   left: 60%;
+   animation-delay: 3s;
+ }
+ 
+ .square:nth-child(7) {
+   width: 90px;
+   height: 90px;
+   left: 85%;
+   animation-delay: 8s;
+ }
+ 
+ .square:nth-child(8) {
+   width: 70px;
+   height: 70px;
+   left: 75%;
+   animation-delay: 3s;
+ }
+ 
+ .square:nth-child(9) {
+   width: 45px;
+   height: 45px;
+   left: 10%;
+   animation-delay: 6s;
+ }
+ 
+ .square:nth-child(10) {
+   width: 55px;
+   height: 55px;
+   left: 60%;
+   animation-delay: 6s;
+ }
+ 
+ @keyframes boxes {
+   0% {
+   bottom: 100%;
+   transform: rotate(180deg);
+   opacity: 0.8;
+   background-color: whitesmoke;  
+  }
+ 
+   100% {bottom: -100px  }
+ }
