--- a/src/components/general.css
+++ b/src/components/general.css
@@ -1,4 +1,5 @@
-.hej{
+.content-form{
+    color: black;
     height: 100%;
     width: 100%;
     display: grid;
@@ -6,20 +7,42 @@
     align-items: center;
     justify-content: center;
 }
-.hejhej{
-    font-size: 20px;
+.info-form{
+    font-size: 17px;
     height: 100%;
     width: 100%;
-    border: solid black 1px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .whole-form{
+    background-color: darkgray;
     display: flex;
-    border: solid black 1px;
 }
 .add-form{
-    background-color:tomato;
-    border: solid black 1px;
+    margin-right: 15vh;
+    justify-content: space-around;
+    background-color:darkgray;
 }
+input[type="text"],
+  input[type="password"] {
+    height: 40px;
+    width: 20vh;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+  }
+  
+  input[type="submit"] {
+    width: 20vh;
+    height:60px;
+    margin-top: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    background: #01d28e;
+    border: 1px solid #01d28e;
+    color: #fff;
+    padding: 10px 20px;
+  }
+  
+  input[type="submit"]:hover {
+    background: #6cf0c2;
+  }
