--- a/src/components/login.css
+++ b/src/components/login.css
@@ -4,9 +4,8 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 20px;
-    height: 60vh;
-    width: 80vh;
+    height: 70vh;
+    width: 100vh;
     font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
     background-color: #f8f9fd;
   }
@@ -17,11 +16,10 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 20px;
-  height: 70vh;
-  width: 120vh;
+  height: 90vh;
+  width: 140vh;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  background-color: #f8f9fd;
+  background-color: darkgray;
 }
 
   input[type="text"],
@@ -36,7 +34,7 @@
     height:60px;
     margin-top: 10px;
     cursor: pointer;
-    font-size: 25px;
+    font-size: 20px;
     background: #01d28e;
     border: 1px solid #01d28e;
     color: #fff;
