--- a/src/components/general.css
+++ b/src/components/general.css
@@ -7,17 +7,19 @@
     align-items: center;
     justify-content: center;
 }
-.info-form{
-    font-size: 17px;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.info-form {
+  font-size: 17px;
+  list-style-type: none;
+  height: 100%;
+  width: 100%;
+
 }
+
 .whole-form{
     background-color: darkgray;
     display: flex;
+    width: 100%;
+    height: 100%;
 }
 .add-form{
     margin-right: 15vh;
