--- a/src/components/login.css
+++ b/src/components/login.css
@@ -7,7 +7,7 @@
     height: 70vh;
     width: 100vh;
     font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-    background-color: #f8f9fd;
+    background-color: darkgrey;
   }
   
 .secondform{
