--- a/src/components/login.css
+++ b/src/components/login.css
@@ -8,6 +8,7 @@
     width: 100vh;
     font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
     background-color: darkgrey;
+    user-select: text;
   }
   
 .secondform{
@@ -20,6 +21,7 @@
   width: 140vh;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   background-color: darkgray;
+  user-select: text;
 }
 
   input[type="text"],
@@ -27,6 +29,7 @@
     height: 40px;
     width: 20vh;
     border: 1px solid rgba(0, 0, 0, 0.2);
+    user-select: text;
   }
   
   input[type="submit"] {
@@ -39,35 +42,42 @@
     border: 1px solid #01d28e;
     color: #fff;
     padding: 10px 20px;
+    user-select: text;
   }
   
   input[type="submit"]:hover {
     background: #6cf0c2;
+    user-select: text;
   }
   
   .button-container {
     display: flex;
     justify-content: center;
+    user-select: text;
   }
   
   .login-form {
     background-color: white;
     padding: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    user-select: text;
   }
   
   .list-container {
     display: flex;
+    user-select: text;
   }
   
   .error {
     color: red;
     font-size: 12px;
+    user-select: text;
   }
   
   .title {
     font-size: 55px;
     margin-bottom: 20px;
+    user-select: text;
   }
   
   .input-container {
@@ -76,4 +86,5 @@
     flex-direction: column;
     gap: 8px;
     margin: 10px;
+    user-select: text;
   }
