--- a/src/components/general.css
+++ b/src/components/general.css
@@ -22,10 +22,20 @@
     width: 100%;
     height: 100%;
     user-select: text;
+    justify-content: space-between;
+}
+.kr{
+  background-color: darkgray;
+  display: grid;
+  margin: 0px 20px;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  user-select: text;
 }
 .add-form{
     margin-right: 15vh;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color:darkgray;
     user-select: text;
 }
